# ros2_templates

./: .gitignore  README.md  README_example.md
bags/: TODO: add a small bag snipit here
src/rosbag2_api_examples/: CMakeLists.txt  package.xml
src/rosbag2_api_examples/config/: bag_params.yaml
src/rosbag2_api_examples/launch/: bag_reader.launch.py
src/rosbag2_api_examples/src/: bag_read_node.cpp
src/template_package/: CMakeLists.txt  package.xml
src/template_package/config/: template_params.yaml
src/template_package/config/other_examples/: bagread_params.yaml  bagwrite_params.yaml  multithread_params.yaml
src/template_package/include/template_package/: agnostic_logic_class.hpp
src/template_package/launch/: template.launch.py
src/template_package/launch/other_examples/: bag_template.launch.py  bagread.launch.py  bagwrite.launch.py  multithread.launch.py
src/template_package/msg/: TemplateMsg.msg
src/template_package/src/: agnostic_logic_class.cpp  ros_node.cpp  template_node.cpp
src/template_package/src/other_examples/: bag_read_node.cpp  bag_write_node.cpp  multithreaded_node.cpp
